--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.19.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.4.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
