--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
