--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "dev": "nodemon server.js --ignore client/"
   },
   "keywords": [],
   "author": "Juan Sebastian Flor <sebastian-flor@hotmail.com> (https://github.com/jsflor)",
