--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
